[package]
name = "breakfastmachine"
description = "Build wacky machines out of parts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2                = { version = "0.34.*", features = ["bundled", "static-link"] }
sdl2-sys            = "0.34.*"
gl                  = "0.14.*"
imgui               = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-sdl2-support  = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-glow-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
glow                = "0.10.*"

